tests/errors/tc_stmt_switch_nonexhaustive.lx
@module "main"

const Color -> enum {
    Red,
    Green,
    Blue,
};

pub const main -> fn () int {
    let c: Color = Color::Red;
    switch (c) {
        Color::Red -> {}
        Color::Green -> {}
    }
    return 0;
}
